--- a/дипка/GYM/HeadForm.resx
+++ b/дипка/GYM/HeadForm.resx
@@ -184,6 +184,28 @@
         60V8t/AzzpmYmJgsGrKyfgOCUEIl/3FKOQAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="TRENINGmetroContextMenu1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>212, 17</value>
+  </metadata>
+  <data name="TRENINGmetroTile28.TileImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAAyRJREFUaEPt
+        mV9IU1EYwA167aHXnoMeZJvb1EpLLHqIUrJA6CmIxJ76B5VSbi4jTSoxogfTDKoRFlGgSX8IjcyCHhpJ
+        f8gpRLCyhNCkqbl9nXP3XT3bvta3rm5L7g9+cDnnnnt/Z7C7sWWZmJiYLE7sHvsKq9tRKvRYXY5Oi8sR
+        wKnMothTvNTmsmVbXfZdwvMi9pFwVAix4pL0sepo4TLbcec68WpWRmLtfSIsGBv6J/EyqcFSbVkuY601
+        zgPWGsdVEf1GRIRio5IRL50aqACjltwp+ye33t3Wh1l8qACjUnFcMYsPFWBUKowrZvGhAoxKhXHFLD5U
+        gFGpMK6YxYcKMKqKHpYIcwOqjd1n8LIRqm4ei5ovatgIE5MTOAtw9n5T1LxUJeUbsNfmwYcvg3hpgKGv
+        Q5Djzp2d9z6/gTMA/hE/ODz5UeulalCyYhaf2JtLK67sxcQI+64f1MY3nyuBqV9T2lg4HIY97ZVxa6VU
+        GFfM4kMFSB+/7dFCJa8/DWhjXb57OALQ6euKW6OrooclYkE2sKWpFCbx1ZYc7qiCUDikHY8Hx2FD4yZy
+        nVQlbRuQXuptw1sAjP0cwyOAhq5G8nxdlbRuYPXJQhgZG8HbRHgXeA85tXNvako1KFkxiw8VoFtwqihu
+        A4HvAcivKyDP16XCuGIWHypA99bL25gN8O3HKB4BtPS0kufrquhhiViQDey+XKE9KiXB6SDs9x7SjiXy
+        UVravJ1cJ1VJywZyT6wRH2DDeHmAtift2vizwX4cAej3v4hbp6uSlg209LbipSNPn/X1xdp4+cWds49S
+        yZGO6ri1UjUoWTGLT+zNd1woh+mZaUyM/67zYOAhzkTeF/KNrs5LqTCumMVHvbH8zvPqow/zQHsC5dWt
+        jY5rLoOZ0AyeAXCt3xs1L1XRwxIxbxuYL1XMDfwNKsCoalCyYhYfKsCoVBhXzOJDBRiVCuOKWXyoAKNS
+        YVwxiw8VYFQqjOlTzOLz3/+4SyF/Xhcbcc79F5DBP69zUf/gsLmdp0VopzAz/+BIgiXZHsdKi9tZbnXb
+        60V8t/AzzpmYmJgsGrKyfgOCUEIl/3FKOQAAAABJRU5ErkJggg==
+</value>
+  </data>
   <metadata name="ABONmetroContextMenu2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 56</value>
   </metadata>
@@ -206,7 +228,10 @@
         60V8t/AzzpmYmJgsGrKyfgOCUEIl/3FKOQAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="metroTile47.TileImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <metadata name="SALEmetroContextMenu1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>216, 56</value>
+  </metadata>
+  <data name="SALEmetroTile47.TileImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAAyRJREFUaEPt
         mV9IU1EYwA167aHXnoMeZJvb1EpLLHqIUrJA6CmIxJ76B5VSbi4jTSoxogfTDKoRFlGgSX8IjcyCHhpJ
@@ -225,10 +250,7 @@
         60V8t/AzzpmYmJgsGrKyfgOCUEIl/3FKOQAAAABJRU5ErkJggg==
 </value>
   </data>
-  <metadata name="TRENINGmetroContextMenu1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>212, 17</value>
-  </metadata>
-  <data name="TRENINGmetroTile28.TileImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="metroTile64.TileImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAAyRJREFUaEPt
         mV9IU1EYwA167aHXnoMeZJvb1EpLLHqIUrJA6CmIxJ76B5VSbi4jTSoxogfTDKoRFlGgSX8IjcyCHhpJ
